# sdp_ss2014_ndt_amcl

./: README.md
documentation/: NDT MCL Documentation.tex  NDT MCL Presentation.tex  ndtmcl.xml
mir_ndtmapping/: CMakeLists.txt  package.xml
mir_ndtmapping/ros/launch/: ndtmapping.launch
ndt_mcl/launch/: nav_common.launch  ndt_mcl.launch
ndt_mcl/src/: 2d_ndt_mcl_node.cpp
