<?xml version="1.0"?>
<package>
  <name>mir_ndtmapping</name>
  <version>0.0.1</version>
  <description>map building with NDT Fuser</description>

  <maintainer email="aleksandar.mitrevski@smail.inf.h-brs.de">Aleksandar Mitrevski</maintainer>
  <maintainer email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</maintainer>

  <license>GPLv3</license>

  <author email="aleksandar.mitrevski@smail.inf.h-brs.de">Aleksandar Mitrevski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ndt_fuser</run_depend>

</package>
